# historicalpoliticaleconomy.github.io

./: .gitattributes  .gitignore  README.md  articles.db  overrides.json  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: data-correction.yml  new-dataset.yml
.github/workflows/: apply-override.yml  ci.yml
docs/: about.html  app.js  data.json  geo.json  index.html  style.css  submit.html
scripts/: apply_parsed.py  parse_issue.py
src/hpedb/: classify.py  cli.py  db.py  enrich.py  export.py  fetch.py  overrides.py  supplement.py  types.py  validate.py
stubs/habanero/: __init__.pyi
tests/: test_app_logic.mjs  test_classify.py  test_cli.py  test_db.py  test_db_classifications.py  test_e2e.py  test_enrich.py  test_export.py  test_fetch.py  test_frontend.py  test_overrides.py  test_parse_issue.py  test_supplement.py
