[tool.poetry]
name = "hpedb"
version = "0.1.0"
description = "Database of political science journal article metadata"
authors = ["Haney Maxwell <hmm2198@columbia.edu>"]
packages = [{include = "hpedb", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
habanero = "^1.2"
requests = "^2.31"
tqdm = "^4"
openai = ">=1.0"
anthropic = ">=0.18"
pycountry = "^26.2.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-mock = "^3"
mypy = "^1"
types-requests = "^2.31"
types-tqdm = "^4"
pytest-cov = "^6"

[tool.poetry.scripts]
hpedb            = "hpedb.cli:main"
hpedb-supplement = "hpedb.supplement:main"
hpedb-classify   = "hpedb.classify:main"
hpedb-enrich     = "hpedb.enrich:main"
hpedb-export     = "hpedb.export:main"
hpedb-overrides  = "hpedb.overrides:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "e2e: integration tests that hit the real Crossref API",
    "db: validation tests against the committed articles.db (expected to fail until --fresh reclassification)",
]

[tool.mypy]
strict = true
mypy_path = "stubs"
